--- a/MainPage.html
+++ b/MainPage.html
@@ -1,29 +1,30 @@
-<!DOCTYPE html>
 <html>
 <head>
   <title>RUN RUN RUN</title>
-
-  <style type="text/css">
-    p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; text-align: center; line-height: 14.0px; font: 12.0px 'Gill Sans'; color: #000000; -webkit-text-stroke: #000000}
-    li.li2 {margin: 0.0px 0.0px 0.0px 0.0px; text-align: center; line-height: 14.0px; font: 12.0px 'Gill Sans'; color: #641aa4; -webkit-text-stroke: #641aa4}
-    span.s1 {font-kerning: none}
-    span.s2 {background-color: #c2e7ff; -webkit-text-stroke: 0px #000000}
-    span.s3 {font-kerning: none; color: #000000; background-color: #c2e7ff; -webkit-text-stroke: 0px #000000}
-    span.s4 {font-kerning: none; color: #641aa4; -webkit-text-stroke: 0px #641aa4}
-    span.s5 {font-kerning: none; background-color: #c2e7ff}
-    span.s6 {font: 99.6px Optima; font-kerning: none; background-color: #9851d6}
-    span.s7 {font-kerning: none; background-color: #9851d6}
-    ul.ul1 {list-style-type: none}
-  </style>
+  <meta charset="utf-8"/>
+  <link rel="stylesheet" type="text/css" href="MainPageStylesheet.css">
+<link rel="shortcut icon" type="image/png" href="img/favicon.png">
 </head>
 <body>
-<p class="p1"><span class="s1"></span></p>
-<ul class="ul1">
-  <li class="li2"><span class="s2"><a href="file:///Users/perrymcelhinney/Desktop/Website/MainPage.html"><span class="s1">HOME</span></a></span><span class="s3"> <a href="file:///Users/perrymcelhinney/Desktop/Website/SetGoals.html"><span class="s4">SET GOALS</span></a> <a href="file:///Users/perrymcelhinney/Desktop/Website/PlanRuns.html"><span class="s4">PLAN RUNS</span></a> </span><span class="s5">MAP RUNS</span><span class="s3"> </span><span class="s5">ABOUT ME</span><span class="s3"><span class="Apple-converted-space"> </span></span></li>
+<header>
+    <nav>
+<ul>
+  <li><a href="./AboutMe.html">About Me</a></li>
+   <li><a href="./MapRuns.html">Map Runs</a></li>
+   <li><a href="./PlanRuns.html">Plan Runs</a></li>
+   <li><a href="./SetGoals.html">Set Goals</a></li>
+  <li><a href="./MainPage.html">Home</a></li>
+<img src="logo.png">
 </ul>
-<h1 style="margin: 0.0px 0.0px 0.0px 0.0px; text-align: center; line-height: 125.0px; font: 99.6px 'Optima ExtraBlack'; color: #000000; -webkit-text-stroke: #000000"><span class="s6"><b>RUN RUN RUN</b></span></h1>
-<h2 style="margin: 0.0px 0.0px 14.9px 0.0px; text-align: center; line-height: 28.0px; font: 18.0px Didot; color: #000000; -webkit-text-stroke: #000000"><span class="s7"><b>Running is one of the best forms of exercise. All you need is a pair of shoes and a little bit </b></span><span class="s1"><b><br>
-</b></span><span class="s7"><b>of time. This website will help you plan runs and set goals. Even if you don't have a coach or </b></span><span class="s1"><b><br>
-</b></span><span class="s7"><b>teammates to inspire you, you can keep challenging yourself and keep growing!</b></span></h2>
+</nav>
+    </div>
+</header>
+
+<div class="boxed">
+<div class="title"> RUN RUN RUN </div>
+<h2>Running is one of the best forms of exercise. All you need is a pair of shoes and<br>
+ a little bit of time. Even if you don't have a coach to push you, this website will <br>help you set goals and plan runs in order to help you stay motivated.</h2>
+</div>
+   
 </body>
 </html>
