--- a/MapRuns.html
+++ b/MapRuns.html
@@ -19,9 +19,10 @@
 </nav>
     </div>
 </header>
-<div class="boxed13">
-<div class="PlanRuns"> PLAN RUNS </div>
-<h2>Planning runs makes sure that all of your goals are reached!</h2>
+<div class="boxed12">
+<div class="PlanRuns"> MAP RUNS </div>
+<h2>Mapping runs helps you make sure that you run the distance you want to in the end!</h2>
+<div class="Map"><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d39364597.33978429!2d-111.5370013759212!3d28.889250854362324!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1581874637023!5m2!1sen!2sus" width="800" height="600" frameborder="0" style="border:0;" allowfullscreen=""></iframe></div>
 </div>
 
 </div>
