--- a/MapRuns.html
+++ b/MapRuns.html
@@ -14,7 +14,7 @@
    <li><a href="./PlanRuns.html">Plan Runs</a></li>
    <li><a href="./SetGoals.html">Set Goals</a></li>
   <li><a href="./MainPage.html">Home</a></li>
-<img src="logo.png">
+<img src="img/logo.png">
 </ul>
 </nav>
     </div>
@@ -22,7 +22,9 @@
 <div class="boxed12">
 <div class="PlanRuns"> MAP RUNS </div>
 <h2>Mapping runs helps you make sure that you run the distance you want to in the end!</h2>
+<div class="boxed14">
 <div class="Map"><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d39364597.33978429!2d-111.5370013759212!3d28.889250854362324!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1581874637023!5m2!1sen!2sus" width="800" height="600" frameborder="0" style="border:0;" allowfullscreen=""></iframe></div>
+</div>
 </div>
 
 </div>
