--- a/PlanRuns.html
+++ b/PlanRuns.html
@@ -14,7 +14,7 @@
    <li><a href="./PlanRuns.html">Plan Runs</a></li>
    <li><a href="./SetGoals.html">Set Goals</a></li>
   <li><a href="./MainPage.html">Home</a></li>
-<img src="logo.png">
+<img src="img/logo.png">
 </ul>
 </nav>
     </div>
