--- a/PlanRuns.html
+++ b/PlanRuns.html
@@ -22,6 +22,7 @@
 <div class="boxed13">
 <div class="PlanRuns"> PLAN RUNS </div>
 <h2>Planning runs makes sure that all of your goals are reached!</h2>
+<iframe src="https://calendar.google.com/calendar/embed?src=24pmcelhinney%40castilleja.org&ctz=America%2FLos_Angeles" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
 </div>
 
 </div>
